--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: vngGrowthCurves
 Title: vngGrowthCurves
-Version: 0.2.0
+Version: 0.2.1
 Authors@R: person("Thomas", "Julou", email = "thomas.julou@normalesup.org",
                   role = c("aut", "cre"))
 Description: Analyse of spectrophotometry time series (for bacterial growth).
@@ -10,6 +10,8 @@ Imports:
     stringr,
     tidyr,
     dplyr,
+    purrr,
+    readr, 
     shiny (>= 0.13),
     shinyFiles,
     rstudioapi (>= 0.5),
